apps/giiveaway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giiveaway-api
  namespace: giiveaway
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: giiveaway-api
  template:
    metadata:
      labels:
        app: giiveaway-api
    spec:
      imagePullSecrets:
      - name: harbor-pull-secret
      containers:
      - name: api
        image: harbor.thysmadev.fr/giiveaway/api:a81cea36f412b3a94044fb7731ee9285b21464e0
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giiveaway-admin
  namespace: giiveaway
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: giiveaway-admin
  template:
    metadata:
      labels:
        app: giiveaway-admin
    spec:
      imagePullSecrets:
      - name: harbor-pull-secret
      containers:
      - name: admin
        image: harbor.thysmadev.fr/giiveaway/admin:a81cea36f412b3a94044fb7731ee9285b21464e0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giiveaway-front
  namespace: giiveaway
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: giiveaway-front
  template:
    metadata:
      labels:
        app: giiveaway-front
    spec:
      imagePullSecrets:
      - name: harbor-pull-secret
      containers:
      - name: front
        image: harbor.thysmadev.fr/giiveaway/front:a81cea36f412b3a94044fb7731ee9285b21464e0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
