apps/giiveaway/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: giiveaway-api
  namespace: giiveaway
spec:
  selector:
    app: giiveaway-api
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: giiveaway-admin
  namespace: giiveaway
spec:
  selector:
    app: giiveaway-admin
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: giiveaway-front
  namespace: giiveaway
spec:
  selector:
    app: giiveaway-front
  ports:
  - port: 80
    targetPort: 80
