apps/giiveaway/pgadmin.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pgadmin-headers
  namespace: giiveaway
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: giiveaway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: giiveaway
spec:
  selector:
    app: pgadmin
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: giiveaway
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: giiveaway-pgadmin-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: pgadmin.giiveaway.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
